--- a/_sources/FAQ.txt
+++ b/_sources/FAQ.txt
@@ -4,9 +4,17 @@ FAQ
 
 Is the source code included with the asset?
 -----------------------------------------------------------------------------------
+Unfortunately UModeler package includes .DLL files instead of source codes and UModeler is designed to be used at only editor currently.
 
 Can UModeler edit models and UV on models that are not made in UModeler?
 -----------------------------------------------------------------------------------
+Of course. You can convert any static mesh and edit it using UModeler. It's called UModelerize.
 
-Can UModeler edit models and UV on models that are not made in UModeler?
+Recommended maximum polygon count and how to deal with a mesh with lots of polygons
+-----------------------------------------------------------------------------------
+
+APIs?
+-----------------------------------------------------------------------------------
+
+A little White-colored icons
 -----------------------------------------------------------------------------------
