--- a/_sources/releasenotes.txt
+++ b/_sources/releasenotes.txt
@@ -5,6 +5,7 @@ Release Notes
  .. toctree::
     :maxdepth: 1
 
+    releasenotes_UModeler_2020
     releasenotes_UModeler_2019
     releasenotes_UModeler_2018
     releasenotes_UModeler_2017
